# deploy_law_web

./: .gitignore  Cargo.toml  Dockerfile  mydatabase.db  new_record.css  setup.toml
firebase/: Cargo.toml
firebase/src/: main.rs
handle-errors/: Cargo.toml
handle-errors/src/: lib.rs
law_rs/: Cargo.toml  output4.csv
law_rs/csv/: 中華民國憲法增修條文.csv
law_rs/src/: lib.rs  main.rs
new_law/: Cargo.toml
new_law/src/: lib.rs
note/: Cargo.toml  law.json
note/src/: lib.rs  main.rs
otherlawresource/: Cargo.toml
otherlawresource/src/: lib.rs  main.rs
src/: main.rs  store.rs
src/routes/: Library.rs  authentication.rs  dictionary.rs  directory.rs  file.rs  law.rs  mod.rs  new_law.rs  note.rs  otherlawresource.rs  record.rs
src/types/: Library.rs  account.rs  dictionary.rs  directory.rs  file.rs  lawinform.rs  mod.rs  new_law.rs  newinterpretation.rs  note.rs  record.rs
stringlearning/: 2  Cargo.toml  out.html  test.html
stringlearning/src/: main.rs
