[package]
name = "law_web"
version = "1.0.0"
edition = "2021"


[dependencies]
law_rs = {path="law_rs"}
bytes = "1.0"
handle-errors = {path="handle-errors"}
tokio = {version = "1.2", features = ["full"]}
warp = "0.3"
serde = {version = "1.0",  features = ["derive"]}
serde_json = "1.0"
chrono = "0.4"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "migrate", "postgres"] }
percent-encoding = "2.3.1"
indexmap = "2.5.0"
log = "0.4"
env_logger = "0.10.0"
log4rs = "1.0"
uuid = { version = "0.8", features = ["v4"]}
tracing = {version = "0.1", featrues = ["log"]}
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.11", features = ["json"]}
pulldown-cmark = "0.9"
rand = "0.8"
rust-argon2 = "1.0"
paseto = "2.0"
config = {version = "0.13.1", features = ["toml"]}
proc-macro2 = "1.0.37"
openssl = { version = "0.10.32"}
redis = { version = "0.27.0", features = ["tokio-comp"]}
dotenv = "0.15.0"
futures = "0.3.30"
select = '0.6.0'
lol_html = "0.3"

# 在 Cargo.toml 中
[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10.32", features = ["vendored"] }


[build-dependencies]
platforms = "2.0.0"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = "unwind"
incremental = false
codegen-units = 16
rpath = false

