[package]
name = "law_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.209", features = ["derive"] }
indexmap = "2.5.0"
anyhow = "1.0.86"
csv = "1.3.0"
regex = "1"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10.32", features = ["vendored"] }
libsqlite3-sys = { version = "0.30.0", features = ["bundled"]}

[dependencies.sqlx]
version = "0.8"
features = [ "runtime-tokio-rustls", "migrate", "postgres", "sqlite",]
